UPDATED basic css and html structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,29 @@
     <title> Flappy Bird </title>
 </head>
 <body>
-    <div class="game-container">
-        <div class="score-board">
-            <div class="score-line">
-                <span>Pontuação:</span>
-                <span class="score-value" id="score">0</span>
-            </div>
-            <div class="high-score-line">
-                <span>Recorde:</span>
-                <span class="high-score-value" id="high-score">0</span>
-            </div>
+    <div class="score-board">
+        <div class="score-line">
+            <span>Pontuação:</span>
+            <span class="score-value" id="score">0</span>
+        </div>
+        <div class="high-score-line">
+            <span>Recorde:</span>
+            <span class="high-score-value" id="high-score">0</span>
+        </div>
     </div>
-        <canvas id="gameCanvas" width="900" height="600"></canvas>
+    <div class="gameContainer">
+    <div class="pipe-duo">
+        <div class="pipe-top">
+            <div class="corpo"></div>
+            <div class="bico"></div>
+        </div>
+        
+        <div class="pipe-bottom">
+            <div class="bico"></div>
+            <div class="corpo"></div>
+        </div>
     </div>
+    </div>
+ 
 </body>
 </html>
