CREATED element constructor function at app.js CREATED barriers constructor function CREATED barriers animation ADD bird.png UPDATED barriers style UPDATED basic html and css structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,28 +8,21 @@
     <title> Flappy Bird </title>
 </head>
 <body>
-    <div class="score-board">
-        <div class="score-line">
-            <span>Pontuação:</span>
-            <span class="score-value" id="score">0</span>
-        </div>
-        <div class="high-score-line">
-            <span>Recorde:</span>
-            <span class="high-score-value" id="high-score">0</span>
-        </div>
-    </div>
     <div class="gameContainer">
-    <div class="pipe-duo">
-        <div class="pipe-top">
-            <div class="corpo"></div>
-            <div class="bico"></div>
+        <div class="score-board">
+            <div class="score-line">
+                <span>Pontuação:</span>
+                <span class="score-value" id="score">0</span>
+            </div>
+            <div class="high-score-line">
+                <span>Recorde:</span>
+                <span class="high-score-value" id="high-score">0</span>
+            </div>
         </div>
         
-        <div class="pipe-bottom">
-            <div class="bico"></div>
-            <div class="corpo"></div>
-        </div>
     </div>
+    <div class="passaro">
+        <img src="../img/birdNew.png" alt="flappy bird" class="bird">
     </div>
  
 </body>
