CREATED start screen, restart screen, start button, restart button UPDATED js logic due to RESTART function implementation

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <div class="gameContainer">
+        <div id="start-screen">
+            <button id="start-button">
+                <img src="../img/Start.png" alt="Start Game">
+            </button>
+        </div>
+        <div id="restart-screen" style="display: none;">
+            <button id="restart-button"><img src="../img/Restart.png" alt="Restart Game"></button>
+        </div>
         <div class="score-board">
             <div class="score-line">
                 <span>Pontuação:</span>
